<resources>
    <string name="app_name">DataCollector</string>
    <string name="jump_left">Jump Left</string>
    <string name="jump_right">Jump Right</string>
    <string name="start">Start</string>
    <string name="ready">Ready</string>
    <string name="permission_required">Permission required.</string>
    <string name="press_start_message">Select a movement then press start.</string>
    <string name="press_start_test_message">Press start.</string>
    <string name="upload_data">Upload Data</string>
    <string name="fake_jump_right">FAKE Jump Right</string>
    <string name="other">Other</string>
    <string name="fake_jump_left">FAKE Jump Left</string>
    <string name="staying">Staying</string>
    <string name="stop">Stop</string>
    <string name="press_stop_message">Make a movement and press stop.</string>
    <string name="test_mode">Test Mode</string>
    <string name="collect_mode">Collect Mode</string>
    <string name="error_loading_model">Error loading the model.</string>
    <string name="error_loading_dataset">Error loading the dataset.</string>
    <string name="prediction_error">Prediction ERROR</string>
</resources>