<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.CollectModeActivity"
        android:keepScreenOn="true">
    <Button
            android:text="@string/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/buttonStart"
            android:padding="24dp" android:layout_margin="16dp"
            android:visibility="visible" android:onClick="onStartClick"
            android:minHeight="54dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="319dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            android:layout_marginBottom="176dp" app:layout_constraintBottom_toTopOf="@+id/buttonStartUpload"/>
    <Button
            android:text="@string/upload_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonStartUpload"
            android:padding="16dp" android:layout_margin="16dp"
            android:visibility="visible" android:onClick="onUploadClick"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="293dp"
            android:layout_marginEnd="292dp" app:layout_constraintEnd_toEndOf="parent"
    />
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/radioGroup" android:layout_marginStart="48dp" android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/buttonStart"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp" android:paddingStart="24dp"
            android:paddingEnd="24dp">
        <RadioButton
                android:text="@string/staying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButtonStaying" android:checked="true"/>
        <RadioButton
                android:text="@string/jump_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButtonJumpLeft"/>
        <RadioButton
                android:text="@string/jump_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButtonJumpRight"/>
        <RadioButton
                android:text="@string/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButtonOther"/>
        <RadioButton
                android:text="@string/fake_jump_left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButtonFakeJumpLeft"/>
        <RadioButton
                android:text="@string/fake_jump_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radioButtonFakeJumpRight"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>