<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TestModeActivity"
        android:keepScreenOn="true">
    <Button
            android:text="@string/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/buttonStart"
            android:padding="24dp" android:layout_margin="16dp"
            android:visibility="visible" android:onClick="onStartClick"
            android:minHeight="54dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="319dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="176dp" app:layout_constraintBottom_toTopOf="@+id/buttonStartUpload"
            app:layout_constraintTop_toBottomOf="@+id/textViewLog" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/upload_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonStartUpload"
            android:padding="16dp" android:layout_margin="16dp"
            android:visibility="visible" android:onClick="onUploadClick"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="293dp"
            android:layout_marginEnd="292dp" app:layout_constraintEnd_toEndOf="parent"
    />
    <TextView
            android:text="@string/press_start_test_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textViewLog"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="16sp" android:layout_marginTop="16dp" android:lines="10"
            android:background="#E8E8E8" android:textColor="@color/black"
            android:padding="16dp" app:lineHeight="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>